[package]
name = "ecw"
version = "0.1.0"
edition = "2021"
authors = ["Zibtsev Vladimir <zibtsev.vladimir@gmail.com>"]
license = "MIT"
description = ""
repository = "https://github.com/zvladimir/et"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.28.0"
iced = {version = "0.13.1", features = ["markdown"]}
nom = "7.1.3"
regex = "1.11.1"
